--- a/.github/workflows/Quorse.yml
+++ b/.github/workflows/Quorse.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     steps:     
     - name: OWASP ZAP Baseline Scan
       uses: zaproxy/action-baseline@v0.3.0
