--- a/.github/workflows/blog-post-workflow.yml
+++ b/.github/workflows/blog-post-workflow.yml
@@ -11,4 +11,4 @@ jobs:
       - uses: actions/checkout@v2
       - uses: gautamkrishnar/blog-post-workflow@master
         with:
-          feed_list: "https://dev.to/feed/cheahengsoon,https://medium.com/feed/@engsooncheah"
+          feed_list: "https://dev.to/feed/cheahengsoon,https://medium.com/feed/@engsooncheah,https://www.youtube.com/feeds/videos.xml?channel_id=UCb09I4K-VYU-KMh0vFewUMw"
